--- a/releases/libstorage-release/libstorage-release-2.yml
+++ b/releases/libstorage-release/libstorage-release-2.yml
@@ -10,7 +10,7 @@ jobs:
   version: 5a3e158644375bbe8f5100d41c39d0c88b7b80e8
   fingerprint: 5a3e158644375bbe8f5100d41c39d0c88b7b80e8
   sha1: f745d478c70ebad46ed16032f44bdfbd17193af6
-commit_hash: c2cd1d01
-uncommitted_changes: true
+commit_hash: 1e365895
+uncommitted_changes: false
 name: libstorage-release
-version: '1'
+version: '2'
