Remove releases folder
Modify example-manifest

Signed-off-by: Gary Preston White <GaryPWhite@live.com>

--- a/example-manifest.yml
+++ b/example-manifest.yml
@@ -18,7 +18,7 @@ jobs:
     azs:
     - my-az
     properties:
-      libstorage: |
+      libstorage: 
         libstorage:
           logging:
             level: debug
